# rodf

./: Cargo.toml  README.md
.github/workflows/: test.yml
resources/: OpenDocument-v1.2-os-dsig-schema.rnc  OpenDocument-v1.2-os-manifest-schema.rnc  OpenDocument-v1.2-os-schema.rnc  get-schema.rs
resources/schemas/v1.1/: OpenDocument-schema-v1.1-errata01-complete.rng  OpenDocument-strict-schema-v1.1-errata01-complete.rng
src/: lib.rs  package.rs
