[package]
name = "rodf"
version = "0.0.0"
edition = "2024"
authors = ["tayu0110"]
license = "MIT"
description = "Open Document Format library for Rust"
repository = "https://github.com/tayu0110/rodf.git"
keywords = ["odf", "office"]
rust-version = "1.95.0"

[dependencies]
anyxml = "0.13.0"
zip = "8.6.0"

[features]
default = ["all"]
all = ["odt", "odg", "odp", "ods", "odc", "odi", "odf", "odb"]
odt = []
odg = []
odp = []
ods = []
odc = []
odi = []
odf = []
odb = []
